--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
-material-dashboard-angular/
-node_modules/
-package-lock.json
+# dependencies
+/client/node_modules
+/server/node_modules
+# System Files
+*.DS_Store
+*/Thumbs.db
+*/package-lock.json
